hard-gists/2280363/run.log
=== Docker Run Log for 2280363 ===
Started at: Mi 29. Okt 13:01:54 CET 2025

[2025-10-29 13:01:54] START: Running container for 2280363
[2025-10-29 13:01:54] SUCCESS: Container a138fea931d23a1017e31243cb94f741a66163cbfff878f6717c3449fb99300d started for 2280363
=== Container logs for 2280363 ===
  File "/snippet.py", line 16
    print ' ' * level, title
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2280363 ===
[2025-10-29 13:01:56] INFO: Container a138fea931d23a1017e31243cb94f741a66163cbfff878f6717c3449fb99300d has stopped
